; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_PpmdRAR_RangeDec_Init.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_PpmdRAR_RangeDec_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CPpmdRAR_RangeDec = type { i32, i32, %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 (%struct.TYPE_2__*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.CPpmdRAR_RangeDec*)* @PpmdRAR_RangeDec_Init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PpmdRAR_RangeDec_Init(%struct.CPpmdRAR_RangeDec* %0) #0 {
  %2 = alloca %struct.CPpmdRAR_RangeDec*, align 8
  %3 = alloca i32, align 4
  store %struct.CPpmdRAR_RangeDec* %0, %struct.CPpmdRAR_RangeDec** %2, align 8
  %4 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %5 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %4, i32 0, i32 0
  store i32 0, i32* %5, align 8
  %6 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %7 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %6, i32 0, i32 3
  store i64 0, i64* %7, align 8
  %8 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %9 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %8, i32 0, i32 1
  store i32 -1, i32* %9, align 4
  store i32 0, i32* %3, align 4
  br label %10

10:                                               ; preds = %30, %1
  %11 = load i32, i32* %3, align 4
  %12 = icmp slt i32 %11, 4
  br i1 %12, label %13, label %33

13:                                               ; preds = %10
  %14 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %15 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = shl i32 %16, 8
  %18 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %19 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %18, i32 0, i32 2
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32 (%struct.TYPE_2__*)*, i32 (%struct.TYPE_2__*)** %21, align 8
  %23 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %24 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %23, i32 0, i32 2
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = call i32 %22(%struct.TYPE_2__* %25)
  %27 = or i32 %17, %26
  %28 = load %struct.CPpmdRAR_RangeDec*, %struct.CPpmdRAR_RangeDec** %2, align 8
  %29 = getelementptr inbounds %struct.CPpmdRAR_RangeDec, %struct.CPpmdRAR_RangeDec* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 8
  br label %30

30:                                               ; preds = %13
  %31 = load i32, i32* %3, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %3, align 4
  br label %10

33:                                               ; preds = %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
